Add code for director, actor, and earnings plots

--- a/notebooks/movie_metadata.ipynb
+++ b/notebooks/movie_metadata.ipynb
@@ -15,7 +15,9 @@
     "import polars as pl\n",
     "import polars.selectors as cs\n",
     "import seaborn as sns\n",
-    "from plotly.subplots import make_subplots"
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "pl.Config.set_tbl_rows(25)"
    ]
   },
   {
@@ -202,7 +204,7 @@
    "metadata": {},
    "source": [
     "### Duplicates\n",
-    "#### `series_title`"
+    "#### `series_title` Duplicates"
    ]
   },
   {
@@ -228,7 +230,7 @@
    "id": "21",
    "metadata": {},
    "source": [
-    "#### Combination of `series_title` and `released_year`"
+    "#### Combination of `series_title` and `released_year` Duplicates"
    ]
   },
   {
@@ -358,16 +360,14 @@
     "# the for loop below.\n",
     "subplot_refs = [(row, col) for row in range(1, 3) for col in range(1, 4)]\n",
     "\n",
-    "# Iterate through the columns and create a box plot for each.\n",
     "for (row, col), col_name in zip(subplot_refs, numeric_data.columns):\n",
     "    # Create box plot and add to figure.\n",
     "    box_plot = px.box(numeric_data, y=col_name)\n",
     "    fig.add_trace(box_plot.data[0], row=row, col=col)\n",
     "\n",
-    "# Update layout\n",
     "fig.update_layout(\n",
-    "    height=800,  # Adjust the height as needed\n",
-    "    width=800,  # Adjust the width as needed\n",
+    "    height=800,\n",
+    "    width=800,\n",
     "    title={\n",
     "        \"text\": \"Numeric Column Distributions\",\n",
     "        \"y\": 0.965,\n",
@@ -375,39 +375,31 @@
     "        \"xanchor\": \"center\",\n",
     "        \"yanchor\": \"top\",\n",
     "    },\n",
+    "    yaxis3_type=\"log\",\n",
+    "    yaxis6_type=\"log\",\n",
     "    showlegend=False,\n",
     "    margin=dict(t=85, l=30, r=30, b=30),\n",
     ")\n",
     "\n",
-    "# Show the plot\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "30",
-   "metadata": {},
-   "source": [
-    "### Grouping by `imdb_rating`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create groups via the `cut` function's bins.\n",
-    "mm.group_by(\n",
-    "    pl.col(\"imdb_rating\")\n",
-    "    .cut(\n",
-    "        breaks=[8.0, 9.0],\n",
-    "        labels=[\"rating < 8\", \"8 <= rating < 9\", \"rating >= 9\"],\n",
-    "        left_closed=True,\n",
-    "    )\n",
-    "    .alias(\"imdb_rating_group\")\n",
-    ").agg(pl.col(\"imdb_rating\").mean().alias(\"avg_rating_per_group\").round(2))"
+    "mm.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31",
+   "metadata": {},
+   "source": [
+    "### Handling Genres"
    ]
   },
   {
@@ -417,17 +409,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mm.describe()"
+    "mm.select(pl.col(\"genre\").list.explode().unique())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "33",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "mm.head()"
+    "There are 21 unique genres. For analysis operations, the genres could be multi-hot encoded across 21 new columns. Instead, the functionality of the polars `List` type column will be used for the operations involving the genres."
    ]
   },
   {
@@ -435,38 +425,12 @@
    "id": "34",
    "metadata": {},
    "source": [
-    "### Handling Genres"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mm.select(pl.col(\"genre\").list.explode().unique())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "36",
-   "metadata": {},
-   "source": [
-    "There are 21 unique genres. For analysis operations, the genres could be multi-hot encoded across 21 new columns. Instead, the functionality of the polars `List` type column will be used for the operations involving the genres. Note that pandas does not have a list data type and thus would need the encoding."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37",
-   "metadata": {},
-   "source": [
     "## Analysis"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "35",
    "metadata": {},
    "source": [
     "### Top Directors Average IMDB Rating\n",
@@ -476,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "37",
    "metadata": {},
    "source": [
     "### Actor Roles\n",
@@ -505,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42",
+   "id": "39",
    "metadata": {},
    "source": [
     "#### Actors with the most roles"
@@ -533,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "41",
    "metadata": {},
    "source": [
     "### Director/Actor Pairings\n",
@@ -570,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "43",
    "metadata": {},
    "source": [
     "#### Martin Scorsese"
@@ -606,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48",
+   "id": "45",
    "metadata": {},
    "source": [
     "### Highest Rated Movie 2006-2016\n",
@@ -643,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,10 +616,101 @@
     "    .filter(pl.col(\"released_year\").is_between(2006, 2016))\n",
     "    .group_by(\"released_year\")\n",
     "    .agg(\n",
-    "        pl.col(\"series_title\").gather(pl.col(\"imdb_rating\").arg_max()).alias(\"highest_rated_movie\"),\n",
-    "        pl.col(\"imdb_rating\").max(),\n",
+    "        pl.col('series_title').filter(pl.col('imdb_rating') == pl.col('imdb_rating').max()).alias(\"highest_rated_movies\"),\n",
+    "        pl.max(\"imdb_rating\"),\n",
     "    )\n",
+    "    .sort(by=\"released_year\")\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47",
+   "metadata": {},
+   "source": [
+    "### Plots\n",
+    "#### Relationship between `runtime` and `gross`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter out movies that don't have a `gross` value.\n",
+    "filtered_mm = mm.filter(pl.col(\"gross\").is_not_null())\n",
+    "\n",
+    "# Add 2 new columns representing the decade of release year and the imdb rating group.\n",
+    "# \\u2264 and \\u2265 are less than or equal to and greater than or equal to respectively.\n",
+    "filtered_mm = (\n",
+    "    filtered_mm\n",
+    "    .with_columns(\n",
+    "        ((pl.col(\"released_year\") // 10) * 10).alias(\"decade\"),\n",
+    "        pl.col(\"imdb_rating\")\n",
+    "        .cut(\n",
+    "            breaks=[8.0, 9.0],\n",
+    "            labels=[\"rating < 8\", \"8 \\u2264 rating < 9\", \"rating \\u2265 9\"],\n",
+    "            left_closed=True,\n",
+    "        )\n",
+    "        .alias(\"imdb_rating_group\"),\n",
+    "    )\n",
+    "    .sort(by=\"decade\")\n",
+    ")\n",
+    "\n",
+    "# fig = px.scatter(\n",
+    "#     filtered_mm,\n",
+    "#     x=\"runtime\",\n",
+    "#     y=\"gross\",\n",
+    "#     log_y=True,\n",
+    "#     color=\"decade\",\n",
+    "#     title=\"Gross Earnings vs. Runtime\",\n",
+    "#     labels={\"runtime\": \"Runtime [min]\", \"gross\": \"Gross [$]\"},\n",
+    "#     custom_data=\"series_title\",\n",
+    "# )\n",
+    "\n",
+    "fig = px.scatter(\n",
+    "    filtered_mm,\n",
+    "    x=\"runtime\",\n",
+    "    y=\"gross\",\n",
+    "    log_y=True,\n",
+    "    color=\"imdb_rating_group\",\n",
+    "    facet_col=\"decade\",\n",
+    "    facet_col_wrap=5,\n",
+    "    title=\"Gross Earnings vs. Runtime\",\n",
+    "    labels={\"runtime\": \"Runtime [min]\", \"gross\": \"Gross [$]\", \"decade\": \"Decade\"},\n",
+    "    custom_data=\"series_title\",\n",
+    "    opacity=0.6,\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    height=400,\n",
+    "    width=1200,\n",
+    "    title={\n",
+    "        \"y\": 0.95,\n",
+    "        \"x\": 0.5,\n",
+    "        \"xanchor\": \"center\",\n",
+    "        \"yanchor\": \"top\",\n",
+    "    },\n",
+    "    margin=dict(t=65, l=30, r=30, b=30),\n",
+    ")\n",
+    "\n",
+    "fig.update_traces(\n",
+    "    hovertemplate=\"<b>Movie:</b> %{customdata}<br>\"\n",
+    "                + \"<b>Runtime:</b> %{x} minutes<br>\"\n",
+    "                + \"<b>Gross:</b> $%{y:,.0f}<extra></extra>\",\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49",
+   "metadata": {},
+   "source": [
+    "#### Relationship between `imdb_rating` and `gross`"
    ]
   },
   {
@@ -665,13 +720,108 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mm.filter(pl.col(\"released_year\") == 2008).sort(by=\"imdb_rating\", descending=True)"
+    "# Filter out movies that don't have a `gross` value.\n",
+    "filtered_mm = mm.filter(pl.col(\"gross\").is_not_null())\n",
+    "\n",
+    "# Add 2 new columns representing the decade of release year and the imdb rating group.\n",
+    "filtered_mm = (\n",
+    "    filtered_mm\n",
+    "    .with_columns(\n",
+    "        ((pl.col(\"released_year\") // 10) * 10).alias(\"decade\"),\n",
+    "        pl.col(\"imdb_rating\")\n",
+    "        .cut(\n",
+    "            breaks=[8.0, 9.0],\n",
+    "            labels=[\"rating < 8\", \"8 <= rating < 9\", \"rating >= 9\"],\n",
+    "            left_closed=True,\n",
+    "        )\n",
+    "        .alias(\"imdb_rating_group\"),\n",
+    "    )\n",
+    "    .sort(by=\"decade\")\n",
+    ")\n",
+    "\n",
+    "fig = px.histogram(\n",
+    "    mm,\n",
+    "    x=\"imdb_rating\",\n",
+    "    y=\"gross\",\n",
+    "    nbins=20,\n",
+    "    histfunc=\"avg\",\n",
+    "    labels={\"imdb_rating\": \"IMDB Rating\", \"gross\": \"Gross Earnings\"},\n",
+    "    title=\"Movie Gross Earnings by IMDB Rating\",\n",
+    "    custom_data=[\"series_title\", \"released_year\"],\n",
+    ")\n",
+    "\n",
+    "# fig = px.scatter(\n",
+    "#     filtered_mm,\n",
+    "#     x=\"imdb_rating\",\n",
+    "#     y=\"gross\",\n",
+    "#     log_y=True,\n",
+    "#     color=\"decade\",\n",
+    "#     title=\"Gross Earnings vs. IMDB Rating\",\n",
+    "#     labels={\"imdb_rating\": \"IMDB Rating\", \"gross\": \"Gross [$]\"},\n",
+    "#     custom_data=[\"series_title\", \"released_year\"],\n",
+    "#     color_continuous_scale=\"Plasma_r\",\n",
+    "# )\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    # height=400,\n",
+    "    # width=900,\n",
+    "    title={\n",
+    "        \"y\": 0.95,\n",
+    "        \"x\": 0.5,\n",
+    "        \"xanchor\": \"center\",\n",
+    "        \"yanchor\": \"top\",\n",
+    "    },\n",
+    "    # margin=dict(t=65, l=30, r=30, b=30),\n",
+    "    # coloraxis_colorbar={\"title\": \"Decade\"},\n",
+    ")\n",
+    "\n",
+    "fig.update_traces(\n",
+    "    hovertemplate=\"<b>Movie:</b> %{customdata[0]}<br>\"\n",
+    "                + \"<b>Release Year:</b> %{customdata[1]}<br>\"\n",
+    "                + \"<b>IMDB Rating:</b> %{x}<br>\"\n",
+    "                + \"<b>Gross:</b> $%{y:,.0f}\n",
+    "                <extra></extra>\",\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51",
+   "metadata": {},
+   "source": [
+    "### Genres\n",
+    "Average `imdb_Rating` rating per genre."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    mm\n",
+    "    .select(\n",
+    "        pl.col(\"genre\"),\n",
+    "        pl.col(\"imdb_rating\")\n",
+    "    )\n",
+    "    .explode(\"genre\")\n",
+    "    .group_by(\"genre\")\n",
+    "    .agg(\n",
+    "        pl.col(\"imdb_rating\").mean().round(2).alias(\"avg_imdb_rating\"),\n",
+    "        pl.len().alias(\"movie_count\"),\n",
+    "    )\n",
+    "    .sort(by=\"movie_count\", descending=True)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": []
