Begin converting jupyter notebook to marimo notebook

--- a/notebooks/movie_metadata.ipynb
+++ b/notebooks/movie_metadata.ipynb
@@ -25,11 +25,20 @@
    "id": "1",
    "metadata": {},
    "source": [
+    "# Movie Metadata Analysis\n",
     "## Extract\n",
     "1. Read the CSV into a dataframe.\n",
-    "2. Remove columns that will not be used in the analysis: `Poster_Link`, `Overview`, and `Certificate`.\n",
+    "    - `mm_raw` - raw movie metadata dataframe\n",
+    "    - `mm` - transformed movie metadata dataframe\n",
+    "    - `Released_Year` is mapped to a string because there is at least 1 value in that column that cannot be inferred as an integer\n",
+    "    - this is investigated in additional cells below\n",
+    "2. Remove columns that will not be used in the analysis:\n",
+    "    - `Poster_Link`\n",
+    "    - `Overview`\n",
+    "    - `Certificate`\n",
     "3. Convert all column names to lowercase for uniformity.\n",
-    "4. Adjust the max allowed length of strings in outputs to easily see the full titles of movies."
+    "4. Adjust the max allowed length of strings in outputs to easily see the full titles of movies\n",
+    "    - the movie title is treated as the priority for viewing string output in the dataframe"
    ]
   },
   {
@@ -39,24 +48,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_metadata_path = Path.cwd() / \"imdb_top_1000.csv\"\n",
+    "movie_metadata_path: Path = Path.cwd() / \"imdb_top_1000.csv\"\n",
     "\n",
-    "# 1. Read CSV into dataframe. mm_raw = raw movie metadata dataframe. `Released_Year` is\n",
-    "# mapped to a string because there is at least 1 value in that column that cannot be\n",
-    "# inferred as an integer. This is investigated further below.\n",
-    "mm_raw = pl.read_csv(\n",
+    "mm_raw: DataFrame = pl.read_csv(\n",
     "    source=movie_metadata_path, schema_overrides={\"Released_Year\": pl.String}\n",
     ")\n",
     "\n",
-    "# 2. Drop the `Poster_Link`, `Overview`, and `Certificate` columns.\n",
-    "mm = mm_raw.select(pl.col(\"*\").exclude(\"Poster_Link\", \"Overview\", \"Certificate\"))\n",
+    "mm: DataFrame = (\n",
+    "    mm_raw\n",
+    "    .select(pl.col(\"*\").exclude(\"Poster_Link\", \"Overview\", \"Certificate\"))\n",
+    "    .rename(lambda col_name: col_name.lower())\n",
+    ")\n",
     "\n",
-    "# 3. Convert column names to lowercase.\n",
-    "mm = mm.rename(lambda col_name: col_name.lower())\n",
-    "\n",
-    "# 4. Adjust max allowed string length in output. The movie title is treated as the\n",
-    "# priority for viewing string output in the dataframe.\n",
-    "max_title_len = mm[\"series_title\"].str.len_bytes().max()\n",
+    "max_title_len: int = mm[\"series_title\"].str.len_bytes().max()\n",
     "pl.Config.set_fmt_str_lengths(max_title_len)\n",
     "\n",
     "print(f\"full dataframe shape: {mm.shape}\")\n",
@@ -69,7 +73,7 @@
    "metadata": {},
    "source": [
     "## Explore\n",
-    "### Column Names Per Data Type"
+    "### Columns Per Data Type"
    ]
   },
   {
