Export the main notebook to jupyter notebook manually to ensure outputs were included

--- a/notebooks/__marimo__/movie_metadata.ipynb
+++ b/notebooks/__marimo__/movie_metadata.ipynb
@@ -723,7 +723,7 @@
     "        pl.col(\"star3\"),\n",
     "        pl.col(\"star4\"),\n",
     "    )\n",
-    "    .melt()\n",
+    "    .unpivot()\n",
     "    .group_by(\"value\")\n",
     "    .len()\n",
     "    .sort(by=\"len\", descending=True)\n",
