--- a/notebooks/__marimo__/movie_metadata.ipynb
+++ b/notebooks/__marimo__/movie_metadata.ipynb
@@ -1013,7 +1013,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "movie-metadata",
+   "language": "python",
+   "name": "movie-metadata"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
