Remove the csv file from __marimo__ folder and update the snapshots of movie_metadata.py

--- a/notebooks/__marimo__/movie_metadata.ipynb
+++ b/notebooks/__marimo__/movie_metadata.ipynb
@@ -1,9 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0",
+   "metadata": {
+    "marimo": {
+     "config": {
+      "hide_code": true
+     }
+    }
+   },
+   "source": [
+    "# Movie Metadata Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +32,14 @@
     "import seaborn as sns\n",
     "from plotly.subplots import make_subplots\n",
     "import numpy as np\n",
+    "from great_tables import GT\n",
     "\n",
     "pl.Config.set_tbl_rows(25)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1",
+   "id": "2",
    "metadata": {
     "marimo": {
      "config": {
@@ -33,7 +48,6 @@
     }
    },
    "source": [
-    "# Movie Metadata Analysis\n",
     "## Extract\n",
     "### Main variables\n",
     "| variable         | description                                                                           |\n",
@@ -49,22 +63,24 @@
     "    - `Poster_Link`\n",
     "    - `Overview`\n",
     "    - `Certificate`\n",
-    "3. Convert all column names to lowercase for uniformity.\n",
-    "4. Adjust the max allowed length of strings in outputs to easily see the full titles of movies\n",
+    "3. Standardize all column names to lowercase for uniformity.\n",
+    "4. Reorder the columns into a more logical order.\n",
+    "5. Adjust the max allowed length of strings in outputs to easily see the full titles of movies\n",
     "    - the movie title is treated as the priority for viewing string output in the dataframe"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_metadata_path: Path = Path.cwd() / \"imdb_top_1000.csv\"\n",
+    "# Extract the dataset.\n",
+    "_movie_metadata_path: Path = Path.cwd() / \"imdb_top_1000.csv\"\n",
     "\n",
     "mm_raw = pl.read_csv(\n",
-    "    source=movie_metadata_path, schema_overrides={\"Released_Year\": pl.String}\n",
+    "    source=_movie_metadata_path, schema_overrides={\"Released_Year\": pl.String}\n",
     ")\n",
     "\n",
     "# Drop the columns mentioned above and rename columns as all lowercase.\n",
@@ -73,6 +89,25 @@
     "    .drop([\"Poster_Link\", \"Overview\", \"Certificate\"])\n",
     "    .rename(lambda col_name: col_name.lower())\n",
     ")  # fmt: skip\n",
+    "\n",
+    "# Reorder columns.\n",
+    "_col_order = [\n",
+    "    \"series_title\",\n",
+    "    \"director\",\n",
+    "    \"released_year\",\n",
+    "    \"genre\",\n",
+    "    \"star1\",\n",
+    "    \"star2\",\n",
+    "    \"star3\",\n",
+    "    \"star4\",\n",
+    "    \"runtime\",\n",
+    "    \"gross\",\n",
+    "    \"meta_score\",\n",
+    "    \"imdb_rating\",\n",
+    "    \"no_of_votes\",\n",
+    "]\n",
+    "\n",
+    "mm_transformed = mm_transformed.select(_col_order)\n",
     "\n",
     "# Change the display so full titles are shown.\n",
     "_max_title_len = mm_transformed[\"series_title\"].str.len_bytes().max()\n",
@@ -83,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "4",
    "metadata": {
     "marimo": {
      "config": {
@@ -99,41 +134,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First check what data types are in the dataframe.\n",
     "pl.Series(mm_transformed.dtypes).value_counts(sort=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
-   "metadata": {
-    "marimo": {
-     "config": {
-      "hide_code": true
-     }
-    }
-   },
-   "source": [
-    "#### Integer Columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mm_transformed.select(cs.integer()).columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7",
    "metadata": {
     "marimo": {
      "config": {
@@ -148,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "8",
    "metadata": {
     "marimo": {
      "config": {
@@ -171,7 +181,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9",
+   "metadata": {
+    "marimo": {
+     "config": {
+      "hide_code": true
+     }
+    }
+   },
+   "source": [
+    "#### Integer Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm_transformed.select(cs.integer()).columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
    "metadata": {
     "marimo": {
      "config": {
@@ -186,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {
     "marimo": {
      "config": {
@@ -210,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {
     "marimo": {
      "config": {
@@ -234,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {
     "marimo": {
      "config": {
@@ -249,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {
     "marimo": {
      "config": {
@@ -272,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "19",
    "metadata": {
     "marimo": {
      "config": {
@@ -294,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {
     "marimo": {
      "config": {
@@ -317,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "22",
    "metadata": {
     "marimo": {
      "config": {
@@ -332,26 +366,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
     "# `pl.struct` is used to tie the two columns together in one object.\n",
     "mm_transformed.filter(pl.struct(\"series_title\", \"director\").is_duplicated())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "23",
-   "metadata": {
-    "marimo": {
-     "config": {
-      "hide_code": true
-     }
-    }
-   },
-   "source": [
-    "There are no duplicates for the composite key `(series_title, director)`. Although not the goal of the project, if a database was constructed, this key could be used as primary key. Because no duplicates were found, it is unnecessary to test the third composite key."
    ]
   },
   {
@@ -365,65 +385,12 @@
     }
    },
    "source": [
-    "## Transformations\n",
-    "### Column Reordering\n",
-    "### Column Transformations\n",
-    "1. `released_year`\n",
-    "    - There is one value that is preventing the column from being cast as an integer column. The movie is `\"Apollo 13\"`; the `released_year` value is `\"PG\"` and should be changed to `\"1995\"`. Then the column can be cast to an integer column. `pl.lit()` is needed because polars would otherwise try to look for a column named `\"1995\"`. Now the column can be cast to an integer type.\n",
-    "1. `genre`\n",
-    "    - The values need to be split on \", \". The split operation will cast the column as a list type.\n",
-    "1. `runtime`\n",
-    "    - The characters \" min\" need to be removed. Then cast to an integer type.\n",
-    "1. `gross`\n",
-    "    - All of the \",\" characters need to be removed. Then cast to an integer type."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Column Reordering.\n",
-    "col_order = [\n",
-    "    \"series_title\",\n",
-    "    \"released_year\",\n",
-    "    \"genre\",\n",
-    "    \"director\",\n",
-    "    \"star1\",\n",
-    "    \"star2\",\n",
-    "    \"star3\",\n",
-    "    \"star4\",\n",
-    "    \"runtime\",\n",
-    "    \"gross\",\n",
-    "    \"meta_score\",\n",
-    "    \"imdb_rating\",\n",
-    "    \"no_of_votes\",\n",
-    "]\n",
-    "\n",
-    "mm = mm_transformed.select(col_order)\n",
-    "\n",
-    "# Column Transformations.\n",
-    "mm = mm.with_columns(\n",
-    "    # Convert `released_year` to integer column.\n",
-    "    pl.when(pl.col(\"released_year\") == \"PG\")\n",
-    "    .then(pl.lit(\"1995\"))\n",
-    "    .otherwise(pl.col(\"released_year\"))\n",
-    "    .cast(pl.Int16)\n",
-    "    .alias(\"released_year\"),\n",
-    "    # Convert `genre` to a list Column.\n",
-    "    pl.col(\"genre\").str.split(\", \"),\n",
-    "    # Address the `runtime` column.\n",
-    "    pl.col(\"runtime\").str.strip_chars_end(characters=\" min\").cast(pl.Int16),\n",
-    "    # Address the `gross` column.\n",
-    "    pl.col(\"gross\").str.replace_all(pattern=\",\", value=\"\", literal=True).cast(pl.Int32),\n",
-    ")"
+    "There are no duplicates for the composite key `(series_title, director)`. Although not the goal of the project, if a database was constructed, this key could be used as primary key. Because no duplicates were found, it is unnecessary to test the third composite key."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "25",
    "metadata": {
     "marimo": {
      "config": {
@@ -431,11 +398,141 @@
      }
     }
    },
-   "source": []
+   "source": [
+    "## Transformations\n",
+    "### Column Transformations\n",
+    "- `released_year` - There is one row value that is preventing the column from being cast as an integer column. The movie is `\"Apollo 13\"`; the `released_year` value is `\"PG\"` and should be changed to `\"1995\"`. Then the column can be cast to an integer column. `pl.lit()` is needed because polars would otherwise try to look for a column named `\"1995\"`.\n",
+    "- `genre` - The values need to be split on `\", \"`. The split operation will cast the column as a list type.\n",
+    "- `runtime` - The characters `\" min\"` need to be removed. Then cast to an unsigned 16-bit integer type.\n",
+    "- `gross` - All of the `\",\"` characters need to be removed. Then cast to an unsigned 64-bit integer type.\n",
+    "- `meta_score` - cast to an unsigned 8-bit integer type.\n",
+    "- `no_of_votes` - cast to an unsigned 32-bit integer type.\n",
+    "> Note: Casting to specific integer types is not strictly necessary here. It is mainly an exercise in evaluating the most minimal data type for each column that could be used in a possible database in a real industry project setting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Column Transformations.\n",
+    "mm = (\n",
+    "    mm_transformed\n",
+    "    .with_columns(\n",
+    "        pl.when(pl.col(\"released_year\") == \"PG\")\n",
+    "          .then(pl.lit(\"1995\"))\n",
+    "          .otherwise(pl.col(\"released_year\"))\n",
+    "          .cast(pl.UInt16)\n",
+    "          .alias(\"released_year\"),\n",
+    "        pl.col(\"genre\").str.split(\", \"),\n",
+    "        pl.col(\"runtime\").str.strip_chars_end(characters=\" min\").cast(pl.UInt16),\n",
+    "        pl.col(\"gross\").str.replace_all(pattern=\",\", value=\"\", literal=True).cast(pl.UInt64),\n",
+    "        pl.col(\"meta_score\").cast(pl.UInt8),\n",
+    "        pl.col(\"no_of_votes\").cast(pl.UInt32),\n",
+    "    )\n",
+    ")  # fmt: skip\n",
+    "\n",
+    "mm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mo.inspect(mm[\"released_year\"], methods=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check that the Apollo 13 entry is corrected.\n",
+    "mm.filter(pl.col(\"series_title\") == \"Apollo 13\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Select all integer columns and compute max and min\n",
+    "agg_df = mm.select(\n",
+    "    [\n",
+    "        cs.integer().max().name.suffix(\"_max\"),\n",
+    "        cs.integer().min().name.suffix(\"_min\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Step 2: Unpivot to long format so each row is a column name\n",
+    "long_df = agg_df.unpivot(cs.all(), variable_name=\"column_stat\", value_name=\"value\")\n",
+    "\n",
+    "long_df\n",
+    "\n",
+    "# # Step 3: Extract column name and stat type, then pivot to desired format\n",
+    "# result = (\n",
+    "#     long_df\n",
+    "#     .with_columns([\n",
+    "#         pl.col(\"column_stat\").str.extract(r\"(.+)_max\", 1).alias(\"column\"),\n",
+    "#         pl.col(\"column_stat\").str.extract(r\"(.+)_min\", 1).alias(\"column_min\"),\n",
+    "#         (pl.col(\"column_stat\").str.ends_with(\"_max\")).alias(\"is_max\"),\n",
+    "#     ])\n",
+    "#     .with_columns([\n",
+    "#         pl.when(pl.col(\"is_max\"))\n",
+    "#           .then(pl.col(\"column\"))\n",
+    "#           .otherwise(pl.col(\"column_min\"))\n",
+    "#           .alias(\"column\"),\n",
+    "#         pl.when(pl.col(\"is_max\"))\n",
+    "#           .then(pl.col(\"value\"))\n",
+    "#           .otherwise(pl.col(\"value\") > 0)\n",
+    "#           .alias(\"value\"),\n",
+    "#         pl.when(pl.col(\"is_max\"))\n",
+    "#           .then(pl.lit(\"max\"))\n",
+    "#           .otherwise(pl.lit(\"min_gt_0\"))\n",
+    "#           .alias(\"stat\"),\n",
+    "#     ])\n",
+    "#     .filter(pl.col(\"column\").is_not_null())\n",
+    "#     .select([\"column\", \"stat\", \"value\"])\n",
+    "#     .pivot(\n",
+    "#         values=\"value\",\n",
+    "#         index=\"column\",\n",
+    "#         columns=\"stat\"\n",
+    "#     )\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GT(pl.DataFrame([2**8, 2**16, 2**32])).fmt_scientific()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GT(maxes).fmt_scientific()"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "32",
    "metadata": {
     "marimo": {
      "config": {
@@ -450,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "35",
    "metadata": {
     "marimo": {
      "config": {
@@ -521,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "37",
    "metadata": {
     "marimo": {
      "config": {
@@ -544,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "38",
    "metadata": {
     "marimo": {
      "config": {
@@ -561,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35",
+   "id": "40",
    "metadata": {
     "marimo": {
      "config": {
@@ -595,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "42",
    "metadata": {
     "marimo": {
      "config": {
@@ -628,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "44",
    "metadata": {
     "marimo": {
      "config": {
@@ -670,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "46",
    "metadata": {
     "marimo": {
      "config": {
@@ -711,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43",
+   "id": "48",
    "metadata": {
     "marimo": {
      "config": {
@@ -753,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +869,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45",
+   "id": "50",
    "metadata": {
     "marimo": {
      "config": {
@@ -788,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47",
+   "id": "52",
    "metadata": {
     "marimo": {
      "config": {
@@ -860,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +1069,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50",
+   "id": "55",
    "metadata": {
     "marimo": {
      "config": {
@@ -988,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,31 +1104,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "movie-metadata",
-   "language": "python",
-   "name": "movie-metadata"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.8"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
 }
