--- a/notebooks/__marimo__/movie_metadata.ipynb
+++ b/notebooks/__marimo__/movie_metadata.ipynb
@@ -21,18 +21,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import marimo as mo\n",
     "from pathlib import Path\n",
     "\n",
+    "import marimo as mo\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import polars as pl\n",
     "import polars.selectors as cs\n",
     "import seaborn as sns\n",
-    "from plotly.subplots import make_subplots\n",
-    "import numpy as np\n",
     "from great_tables import GT\n",
+    "from plotly.subplots import make_subplots\n",
     "\n",
     "pl.Config.set_tbl_rows(25)"
    ]
@@ -76,9 +76,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract the dataset.\n",
-    "_movie_metadata_path: Path = Path.cwd() / \"imdb_top_1000.csv\"\n",
+    "_movie_metadata_path = Path.cwd() / \"imdb_top_1000.csv\"\n",
     "\n",
+    "# Load the dataset.\n",
     "mm_raw = pl.read_csv(\n",
     "    source=_movie_metadata_path, schema_overrides={\"Released_Year\": pl.String}\n",
     ")\n",
@@ -176,27 +176,15 @@
     }
    },
    "source": [
-    "`released_year`, `runtime`, and `gross` should all be integer columns."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9",
-   "metadata": {
-    "marimo": {
-     "config": {
-      "hide_code": true
-     }
-    }
-   },
-   "source": [
+    "`released_year`, `runtime`, and `gross` should all be integer columns.\n",
+    "\n",
     "#### Integer Columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "10",
    "metadata": {
     "marimo": {
      "config": {
@@ -220,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "12",
    "metadata": {
     "marimo": {
      "config": {
@@ -244,17 +232,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cast to integer by supressing the error that results. Then find the null values.\n",
-    "mm_transformed.filter(pl.col(\"released_year\").cast(pl.Int64, strict=False).is_null())"
+    "mm_transformed.filter(\n",
+    "    pl.col(\"released_year\").cast(pl.Int64, strict=False).is_null()\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "14",
    "metadata": {
     "marimo": {
      "config": {
@@ -263,7 +253,19 @@
     }
    },
    "source": [
-    "The only problem row preventing casting is the movie `\"Apollo 13\"`. The release year for this movie is `1995` and will be updated in the **Column Transformations** section below."
+    "The only problem row preventing casting is the movie `\"Apollo 13\"`. The release year for this movie is `1995` and will be updated in the **Column Transformations** section below.\n",
+    "\n",
+    "### Missing/Null Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm_transformed.null_count()"
    ]
   },
   {
@@ -277,44 +279,8 @@
     }
    },
    "source": [
-    "### Missing/Null Values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mm_transformed.null_count()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18",
-   "metadata": {
-    "marimo": {
-     "config": {
-      "hide_code": true
-     }
-    }
-   },
-   "source": [
-    "Null values are only found in the `gross` and `meta_score` columns. This is not really an issue therefore no action will be taken for null values."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "19",
-   "metadata": {
-    "marimo": {
-     "config": {
-      "hide_code": true
-     }
-    }
-   },
-   "source": [
+    "Null values are only found in the `gross` and `meta_score` columns. This is not really an issue therefore no action will be taken for null values.\n",
+    "\n",
     "### Duplicates\n",
     "- Since each record should represent a unique film or TV series, we'll search for a candidate key by testing the following composite keys:\n",
     "    - `(series_title,)`\n",
@@ -328,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "18",
    "metadata": {
     "marimo": {
      "config": {
@@ -346,37 +312,25 @@
     }
    },
    "source": [
-    "There are two movies that share the same title but are clearly different movies. No action is needed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22",
-   "metadata": {
-    "marimo": {
-     "config": {
-      "hide_code": true
-     }
-    }
-   },
-   "source": [
+    "There are two movies that share the same title but are clearly different movies. No action is needed.\n",
+    "\n",
     "#### `(series_title, director)`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# `pl.struct` is used to tie the two columns together in one object.\n",
+    "# `pl.struct` is used to tie the two columns together into one object.\n",
     "mm_transformed.filter(pl.struct(\"series_title\", \"director\").is_duplicated())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "20",
    "metadata": {
     "marimo": {
      "config": {
@@ -385,20 +339,8 @@
     }
    },
    "source": [
-    "There are no duplicates for the composite key `(series_title, director)`. Although not the goal of the project, if a database was constructed, this key could be used as primary key. Because no duplicates were found, it is unnecessary to test the third composite key."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "25",
-   "metadata": {
-    "marimo": {
-     "config": {
-      "hide_code": true
-     }
-    }
-   },
-   "source": [
+    "There are no duplicates for the composite key `(series_title, director)`. Although not the goal of the project, if a database was constructed, this key could be used as primary key. Because no duplicates were found, it is unnecessary to test the third composite key.\n",
+    "\n",
     "## Transformations\n",
     "### Column Transformations\n",
     "- `released_year` - There is one row value that is preventing the column from being cast as an integer column. The movie is `\"Apollo 13\"`; the `released_year` value is `\"PG\"` and should be changed to `\"1995\"`. Then the column can be cast to an integer column. `pl.lit()` is needed because polars would otherwise try to look for a column named `\"1995\"`.\n",
@@ -413,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,17 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mo.inspect(mm[\"released_year\"], methods=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "26",
    "metadata": {
     "marimo": {
      "config": {
@@ -547,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35",
+   "id": "29",
    "metadata": {
     "marimo": {
      "config": {
@@ -618,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "31",
    "metadata": {
     "marimo": {
      "config": {
@@ -636,20 +568,8 @@
     }
    },
    "source": [
-    "There are 21 unique genres. For analysis operations, the genres could be multi-hot encoded across 21 new columns. Instead, the functionality of the polars `List` type column will be used for the operations involving the genres."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38",
-   "metadata": {
-    "marimo": {
-     "config": {
-      "hide_code": true
-     }
-    }
-   },
-   "source": [
+    "There are 21 unique genres. For analysis operations, the genres could be multi-hot encoded across 21 new columns. Instead, the functionality of the polars `List` type column will be used for the operations involving the genres.\n",
+    "\n",
     "## Analysis\n",
     "### Top Directors Average IMDB Rating\n",
     "Find the 3 directors with the most movies. What is the average imdb score for each?"
@@ -658,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "33",
    "metadata": {
     "marimo": {
      "config": {
@@ -692,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42",
+   "id": "35",
    "metadata": {
     "marimo": {
      "config": {
@@ -725,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "37",
    "metadata": {
     "marimo": {
      "config": {
@@ -767,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "39",
    "metadata": {
     "marimo": {
      "config": {
@@ -808,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48",
+   "id": "41",
    "metadata": {
     "marimo": {
      "config": {
@@ -850,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50",
+   "id": "43",
    "metadata": {
     "marimo": {
      "config": {
@@ -885,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52",
+   "id": "45",
    "metadata": {
     "marimo": {
      "config": {
@@ -957,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +887,6 @@
     "# max = mm[\"imdb_rating\"].max()\n",
     "width = 0.5\n",
     "n_bins = 5\n",
-    "\n",
     "\n",
     "breaks = np.linspace(min, max, n_bins)\n",
     "\n",
@@ -992,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +933,6 @@
     "#     )\n",
     "#     .sort(by=\"decade\")\n",
     "# )\n",
-    "\n",
     "\n",
     "# n_bins = 10\n",
     "# min_rating = mm[\"imdb_rating\"].min()\n",
@@ -1069,7 +987,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55",
+   "id": "48",
    "metadata": {
     "marimo": {
      "config": {
@@ -1085,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": []
